# WordCounterParallel

./: CMakeLists.txt  WordCounterParallel  WordCounterParallel.cpp  bloom.cpp  bloom.h  fileprep.sh  words.txt
